/**
 * Copyright 2018 LinkedIn Corporation. All rights reserved. Licensed under the BSD-2 Clause license.
 * See LICENSE in the project root for license information.
 */
option java_package = "com.linkedin.tony.rpc.proto";
option java_outer_classname = "YarnTonyClusterProtos";

message GetTaskInfosRequestProto {
}

message GetTaskInfosResponseProto {
    message TaskInfoProto {
        required string name = 1;
        required string index = 2;
        required string url = 3;
        enum TaskStatus {
            NEW = 0;
            READY = 1;
            RUNNING = 2;
            FAILED = 3;
            SUCCEEDED = 4;
            FINISHED = 5;
        }
        required TaskStatus taskStatus = 4 [default = NEW];
    }

    repeated TaskInfoProto task_infos = 1;
}

message GetClusterSpecRequestProto {
}

message GetClusterSpecResponseProto {
    required string cluster_spec = 1;
}

message RegisterWorkerSpecRequestProto {
    optional string worker = 1;
    optional string spec = 2;
}

message RegisterWorkerSpecResponseProto {
    optional string spec = 1;
}

message RegisterTensorBoardUrlRequestProto {
    optional string spec = 1;
}

message RegisterTensorBoardUrlResponseProto {
    optional string spec = 1;
}

message RegisterExecutionResultRequestProto {
    required int32 exitCode = 1;
    required string jobName = 2;
    required string jobIndex = 3;
    required string sessionId = 4;
}

message RegisterExecutionResultResponseProto {
    required string message = 1;
}

message EmptyProto {
}

message HeartbeatRequestProto {
    required string taskId = 1;
}

message HeartbeatResponseProto {
    // nothing for the time-being, but we can include commands later
}

message RegisterCallbackInfoRequestProto {
    required string taskId = 1;
    required string callbackInfo = 2;
}
